
syntax = "proto2";

package qcraft.planner;
option go_package = "qcraft-proto.ai/onboard/planner/common/proto/planner_status";

message PlannerStatusProto {
  enum PlannerStatusCode {
    OK = 1;
    ROUTE_MSG_UNAVAILABLE = 2;
    INPUT_INCORRECT = 3;
    ROUTING_FAILED = 4;
    OBJECT_MANAGER_FAILED = 5;
    REFERENCE_PATH_UNAVAILABLE = 6;
    SCHEDULER_UNAVAILABLE = 7;
    DECISION_CONSTRAINTS_UNAVAILABLE = 8;
    INITIALIZER_FAILED = 9;
    OPTIMIZER_FAILED = 10;
    PATH_EXTENSION_FAILED = 11;
    SPEED_OPTIMIZER_FAILED = 12;
    TRAJECTORY_VALIDATION_FAILED = 13;
    FALLBACK_PREVIOUS_INFO_UNAVAILABLE = 14;
    START_POINT_PROJECTION_TO_ROUTE_FAILED = 15;
    SELECTOR_FAILED = 16;
    RESET_PREV_TARGET_LANE_PATH_FAILED = 17;
    LOCAL_MAP_BUILDER_FAILED = 18;
    SCENE_UNDERSTANDING_FAILED = 19;
    TRAFFIC_LIGHT_INFO_COLLECTOR_FAILED = 20;
    PLANNER_STATE_INCOMPLETE = 21;
    PATH_PLANNER_FAILED = 22;
    PLANNER_ABNORMAL_EXIT = 99;
    EXPERT_TRAJ_UNAVAILABLE = 200;
    EXPERT_TRAJ_INTERMEDIATES_RECONSTRUCTION_FAILED = 201;
    EXPERT_SPEED_IN_CONTRADICTORY_WITH_SPEED_FINDER = 202;
  }
  optional PlannerStatusCode status = 1;
  optional string message = 2;
}
